--- a/config/pagseguro.yml
+++ b/config/pagseguro.yml
@@ -2,7 +2,7 @@ development: &development
   developer: true
   base: "http://localhost:3000"
   return_to: "/pedido/efetuado"
-  email: user@example.com
+  email: diegosax@terra.com.br
 
 test:
   <<: *development
@@ -10,4 +10,4 @@ test:
 production:
   authenticity_token: 0A15C8D670514BBF8A583497EDA1AD4B
   email: diegosax@terra.com.br
-  return_to: "http://www.buycheap.com.br/pedido/efetuado"
+  return_to: "http://buycheap.heroku.com/pedido/efetuado"
