--- a/config/gateway.yml
+++ b/config/gateway.yml
@@ -1,4 +1,9 @@
 # you can find your token and api in https://desenvolvedor.moip.com.br/sandbox/AdmAPI.do?method=keys
+production:
+  uri: https://desenvolvedor.moip.com.br/sandbox
+  token: LX5WC5DPCCYEBKCIPOVKOK9WN5K4PQPE
+  key: HCXWRNQJXQJOBWU6PVBJNBW4HDUQZ6KQZBQ07MGE
+
 development:
   uri: https://desenvolvedor.moip.com.br/sandbox
   token: LX5WC5DPCCYEBKCIPOVKOK9WN5K4PQPE
