--- a/config/development.sphinx.conf
+++ b/config/development.sphinx.conf
@@ -18,13 +18,14 @@ source product_core_0
   sql_pass = buycheap
   sql_db = buycheap_development
   sql_query_pre = SET TIME ZONE 'UTC'
-  sql_query = SELECT "products"."id" * 1::INT8 + 0 AS "id" , "products"."name" AS "name", "products"."short_description" AS "short_description", "products"."description" AS "description", "categories"."name" AS "category_name", "users"."name" AS "company_name", "products"."id" AS "sphinx_internal_id", 0 AS "sphinx_deleted", 485965105 AS "class_crc", COALESCE('Product', '') AS "sphinx_internal_class", COALESCE("products"."name", '') AS "name_sort", "products"."company_id" AS "company_id", "products"."category_id" AS "category_id", cast(extract(epoch from "products"."updated_at") as int) AS "updated_at", cast(extract(epoch from "products"."created_at") as int) AS "created_at" FROM "products" LEFT OUTER JOIN "categories" ON "categories"."id" = "products"."category_id" LEFT OUTER JOIN "users" ON "users"."id" = "products"."company_id" AND "users"."type" IN ('Company') WHERE ("products"."id" >= $start AND "products"."id" <= $end) GROUP BY "products"."id", "products"."name", "products"."short_description", "products"."description", "categories"."name", "users"."name", "products"."id", "products"."name", "products"."company_id", "products"."category_id", "products"."updated_at", "products"."created_at"
+  sql_query = SELECT "products"."id" * 1::INT8 + 0 AS "id" , "products"."name" AS "name", "products"."short_description" AS "short_description", "products"."description" AS "description", "categories"."name" AS "category_name", "users"."name" AS "company_name", "products"."id" AS "sphinx_internal_id", 0 AS "sphinx_deleted", 485965105 AS "class_crc", COALESCE('Product', '') AS "sphinx_internal_class", COALESCE("products"."name", '') AS "name_sort", "products"."company_id" AS "company_id", "products"."category_id" AS "category_id", cast(extract(epoch from "products"."updated_at") as int) AS "updated_at", cast(extract(epoch from "products"."created_at") as int) AS "created_at", ((1 - price/original_price) * 100) AS "discount" FROM "products" LEFT OUTER JOIN "categories" ON "categories"."id" = "products"."category_id" LEFT OUTER JOIN "users" ON "users"."id" = "products"."company_id" AND "users"."type" IN ('Company') WHERE ("products"."id" >= $start AND "products"."id" <= $end) GROUP BY "products"."id", "products"."name", "products"."short_description", "products"."description", "categories"."name", "users"."name", "products"."id", "products"."name", "products"."company_id", "products"."category_id", "products"."updated_at", "products"."created_at"
   sql_query_range = SELECT COALESCE(MIN("id"), 1::bigint), COALESCE(MAX("id"), 1::bigint) FROM "products" 
   sql_attr_uint = sphinx_internal_id
   sql_attr_uint = sphinx_deleted
   sql_attr_uint = class_crc
   sql_attr_uint = company_id
   sql_attr_uint = category_id
+  sql_attr_uint = discount
   sql_attr_timestamp = updated_at
   sql_attr_timestamp = created_at
   sql_attr_string = sphinx_internal_class
