Fixed Paperclip and some sign up issues

--- a/config/development.sphinx.conf
+++ b/config/development.sphinx.conf
@@ -5,9 +5,9 @@ indexer
 searchd
 {
   listen = 127.0.0.1:9312
-  log = /home/diegosax/projects/Buy-Cheap/log/searchd.log
-  query_log = /home/diegosax/projects/Buy-Cheap/log/searchd.query.log
-  pid_file = /home/diegosax/projects/Buy-Cheap/log/searchd.development.pid
+  log = C:/Sites/Buy-Cheap/log/searchd.log
+  query_log = C:/Sites/Buy-Cheap/log/searchd.query.log
+  pid_file = C:/Sites/Buy-Cheap/log/searchd.development.pid
 }
 
 source product_core_0
@@ -36,7 +36,7 @@ source product_core_0
 index product_core
 {
   source = product_core_0
-  path = /home/diegosax/projects/Buy-Cheap/db/sphinx/development/product_core
+  path = C:/Sites/Buy-Cheap/db/sphinx/development/product_core
   charset_type = utf-8
 }
 
